Changelog
=========

1.5.1 (unreleased)
------------------

- Nothing changed yet.


1.5.0 (2014-04-13)
------------------

- Restore original behavior to override the exiting robot_output.xml. Set
  environment variable ROBOTSUITE_APPEND_OUTPUT_XML=1 to append test results to
  the existing robot_output.xml.
  [Asko Soukka]

1.4.3 (2014-01-27)
------------------

- Fix issue where test suites with sub-suites were not supported
  [Asko Soukka]

1.4.2 (2013-11-22)
------------------

- Fix issue where suite setups were run for suites without tests
  wit robotframework >= 2.8.0
  [Asko Soukka]

1.4.1 (2013-10-13)
------------------

- Fix regression in 1.4.0, which dropped relative path names from robot test
  cases
  [Asko Soukka]
- Fix RobotTestCase to mimic DocTestCase enough to allow plone.testing to set
  'layer' for it
  [Asko Soukka]
- Fix to set given test 'setUp' and 'tearDown' methods properly as
  instancemethods (will break existing methods not accepting 'self' parameters)
  [Asko Soukka]

1.4.0 (2013-06-19)
------------------

- Supports only roboframework >= 2.8.
  Use robotsuite 1.3.x with robotframework 1.7.x
  [Asko Soukka]

1.3.3 (2013-06-05)
------------------

- Fix to support custom screenshot filenames with paths [fix #2]
  [Asko Soukka]

1.3.2 (2013-06-03)
------------------

- Remove screenshot capturing from functional test
  [Asko Soukka]

1.3.1 (2013-06-03)
------------------

- Pin robotframework < 2.8rc1, because robotsuite is not yet
  compatible with robotframework 2.8.x
  [Asko Soukka]

1.3.0 (2013-04-09)
------------------

- Allow passing arguments critical/noncritical
  to only raise an AssertionError if the test is critical
  [reinhardt]

1.2.2 (2013-04-08)
------------------

- Fix to copy all screenshots (not only selenium-screenshot\*.png) when mergin
  test reports

1.2.1 (2013-03-08)
------------------

- Revert setting the default zope.testrunner level and support setting it via