@@ -4,7 +4,8 @@ Changelog
 1.5.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added Python 3.4 support.
+  [vincentfretin]
 
 
 1.5.0 (2014-04-13)
